nrem vs rem/wake graph

--- a/NirsLabProject/notebooks/extract features - resize groups and fix sleeping flag.ipynb
+++ b/NirsLabProject/notebooks/extract features - resize groups and fix sleeping flag.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a2621383",
+   "id": "5e9809ae",
    "metadata": {},
    "source": [
     "### Imports"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0ee7032e",
+   "id": "6ae96002",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6c735fd",
+   "id": "d01f52c3",
    "metadata": {},
    "source": [
     "### Extract Paths of stimuli features\n",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "49d12c79",
+   "id": "0d32b406",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b8d08dad",
+   "id": "ffd38521",
    "metadata": {},
    "outputs": [
     {
@@ -182,6 +182,23 @@
     "    flat_features = regenerate_flat_features(subj)\n",
     "    np.save(subj.paths.subject_flat_features_path, flat_features)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "029512b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil\n",
+    "import os\n",
+    "\n",
+    "for subj in stimuli_subjects_with_features:\n",
+    "    new_path = '/tmp/flat_features'\n",
+    "    if not os.path.exists(new_path):\n",
+    "        os.makedirs(new_path)\n",
+    "    shutil.copyfile(subj.paths.subject_flat_features_path, os.path.join(new_path, f'{subj.p_number}_flat_features.npy'))"
    ]
   }
  ],
