all electrodes graph

--- a/NirsLabProject/notebooks/extract features - resize groups and fix sleeping flag.ipynb
+++ b/NirsLabProject/notebooks/extract features - resize groups and fix sleeping flag.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "6ae96002",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "ffd38521",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
     "        flat_features = regenerate_flat_features(subj)\n",
     "        print(subj.name, flat_features.shape)\n",
     "        np.save(subj.paths.subject_flat_features_path, flat_features)\n",
-    "    "
+    "        subj.save_flat_features_to_csv()"
    ]
   },
   {
@@ -134,40 +134,414 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "cfe394d1",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "p485 0.6395976284058357\n",
-      "p486 0.866524064171123\n",
-      "p488 0.7786481546509638\n",
-      "p496 0.835896387881265\n",
-      "p499 0.8724561455936407\n",
-      "p520 0.7273381294964029\n",
-      "avg: 0.7867434183665384\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>channel</th>\n",
+       "      <th>amplitude</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>cord_x</th>\n",
+       "      <th>cord_y</th>\n",
+       "      <th>cord_z</th>\n",
+       "      <th>group</th>\n",
+       "      <th>group_focal</th>\n",
+       "      <th>group_event_duration</th>\n",
+       "      <th>...</th>\n",
+       "      <th>group_event_shallowest</th>\n",
+       "      <th>group_event_spatial_spread</th>\n",
+       "      <th>is_in_scalp</th>\n",
+       "      <th>stimuli_flag</th>\n",
+       "      <th>hypnogram_flag</th>\n",
+       "      <th>subject_number</th>\n",
+       "      <th>group_focal_amplitude</th>\n",
+       "      <th>angle</th>\n",
+       "      <th>relative_spike_amplitude</th>\n",
+       "      <th>relative_spike_duration</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1761.0</td>\n",
+       "      <td>LA2</td>\n",
+       "      <td>2.976170</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>30.0000</td>\n",
+       "      <td>3.333</td>\n",
+       "      <td>-35.333</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>LA2</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>520.0</td>\n",
+       "      <td>2.976170</td>\n",
+       "      <td>3.477607</td>\n",
+       "      <td>2.097570</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1859.0</td>\n",
+       "      <td>LA1</td>\n",
+       "      <td>2.127265</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>-33.7500</td>\n",
+       "      <td>0.750</td>\n",
+       "      <td>-30.250</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>LA2</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>520.0</td>\n",
+       "      <td>2.976170</td>\n",
+       "      <td>4.503121</td>\n",
+       "      <td>3.596624</td>\n",
+       "      <td>28.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2435.0</td>\n",
+       "      <td>LA1</td>\n",
+       "      <td>3.804194</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>-33.7500</td>\n",
+       "      <td>0.750</td>\n",
+       "      <td>-30.250</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>LA1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>520.0</td>\n",
+       "      <td>3.804194</td>\n",
+       "      <td>13.968792</td>\n",
+       "      <td>6.460579</td>\n",
+       "      <td>34.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3316.0</td>\n",
+       "      <td>LA2</td>\n",
+       "      <td>4.955938</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>30.0000</td>\n",
+       "      <td>3.333</td>\n",
+       "      <td>-35.333</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>LA2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>520.0</td>\n",
+       "      <td>4.955938</td>\n",
+       "      <td>13.258108</td>\n",
+       "      <td>4.473004</td>\n",
+       "      <td>27.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4408.0</td>\n",
+       "      <td>LA4</td>\n",
+       "      <td>8.316221</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>33.3333</td>\n",
+       "      <td>-7.333</td>\n",
+       "      <td>-22.000</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>LA4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>520.0</td>\n",
+       "      <td>8.316221</td>\n",
+       "      <td>13.515828</td>\n",
+       "      <td>8.457921</td>\n",
+       "      <td>32.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1006</th>\n",
+       "      <td>4676831.0</td>\n",
+       "      <td>LA4</td>\n",
+       "      <td>1.300367</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>33.3333</td>\n",
+       "      <td>-7.333</td>\n",
+       "      <td>-22.000</td>\n",
+       "      <td>827.0</td>\n",
+       "      <td>LA4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>520.0</td>\n",
+       "      <td>1.300367</td>\n",
+       "      <td>1.823837</td>\n",
+       "      <td>1.026618</td>\n",
+       "      <td>36.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1007</th>\n",
+       "      <td>4677205.0</td>\n",
+       "      <td>LA4</td>\n",
+       "      <td>1.171589</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>33.3333</td>\n",
+       "      <td>-7.333</td>\n",
+       "      <td>-22.000</td>\n",
+       "      <td>828.0</td>\n",
+       "      <td>LA4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>520.0</td>\n",
+       "      <td>1.171589</td>\n",
+       "      <td>2.174228</td>\n",
+       "      <td>0.923803</td>\n",
+       "      <td>31.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1008</th>\n",
+       "      <td>4682278.0</td>\n",
+       "      <td>LA1</td>\n",
+       "      <td>1.286573</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>-33.7500</td>\n",
+       "      <td>0.750</td>\n",
+       "      <td>-30.250</td>\n",
+       "      <td>829.0</td>\n",
+       "      <td>LA1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>520.0</td>\n",
+       "      <td>1.286573</td>\n",
+       "      <td>1.430909</td>\n",
+       "      <td>1.190395</td>\n",
+       "      <td>46.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1009</th>\n",
+       "      <td>4737821.0</td>\n",
+       "      <td>LA1</td>\n",
+       "      <td>1.994857</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>-33.7500</td>\n",
+       "      <td>0.750</td>\n",
+       "      <td>-30.250</td>\n",
+       "      <td>830.0</td>\n",
+       "      <td>LA1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>520.0</td>\n",
+       "      <td>1.994857</td>\n",
+       "      <td>1.798297</td>\n",
+       "      <td>2.020678</td>\n",
+       "      <td>52.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1010</th>\n",
+       "      <td>4757796.0</td>\n",
+       "      <td>LA1</td>\n",
+       "      <td>1.732562</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>-33.7500</td>\n",
+       "      <td>0.750</td>\n",
+       "      <td>-30.250</td>\n",
+       "      <td>831.0</td>\n",
+       "      <td>LA1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>520.0</td>\n",
+       "      <td>1.732562</td>\n",
+       "      <td>4.168890</td>\n",
+       "      <td>1.400137</td>\n",
+       "      <td>31.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1011 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      timestamp channel  amplitude  duration   cord_x  cord_y  cord_z  group  \\\n",
+       "0        1761.0     LA2   2.976170      38.0  30.0000   3.333 -35.333    0.0   \n",
+       "1        1859.0     LA1   2.127265      20.0 -33.7500   0.750 -30.250    0.0   \n",
+       "2        2435.0     LA1   3.804194      24.0 -33.7500   0.750 -30.250    1.0   \n",
+       "3        3316.0     LA2   4.955938      29.0  30.0000   3.333 -35.333    2.0   \n",
+       "4        4408.0     LA4   8.316221      32.0  33.3333  -7.333 -22.000    3.0   \n",
+       "...         ...     ...        ...       ...      ...     ...     ...    ...   \n",
+       "1006  4676831.0     LA4   1.300367      41.0  33.3333  -7.333 -22.000  827.0   \n",
+       "1007  4677205.0     LA4   1.171589      37.0  33.3333  -7.333 -22.000  828.0   \n",
+       "1008  4682278.0     LA1   1.286573      48.0 -33.7500   0.750 -30.250  829.0   \n",
+       "1009  4737821.0     LA1   1.994857      51.0 -33.7500   0.750 -30.250  830.0   \n",
+       "1010  4757796.0     LA1   1.732562      34.0 -33.7500   0.750 -30.250  831.0   \n",
+       "\n",
+       "     group_focal  group_event_duration  ...  group_event_shallowest  \\\n",
+       "0            LA2                  98.0  ...                     1.0   \n",
+       "1            LA2                  98.0  ...                     1.0   \n",
+       "2            LA1                   0.0  ...                     1.0   \n",
+       "3            LA2                   0.0  ...                     1.0   \n",
+       "4            LA4                   0.0  ...                     1.0   \n",
+       "...          ...                   ...  ...                     ...   \n",
+       "1006         LA4                   0.0  ...                     1.0   \n",
+       "1007         LA4                   0.0  ...                     1.0   \n",
+       "1008         LA1                   0.0  ...                     1.0   \n",
+       "1009         LA1                   0.0  ...                     1.0   \n",
+       "1010         LA1                   0.0  ...                     1.0   \n",
+       "\n",
+       "      group_event_spatial_spread  is_in_scalp  stimuli_flag  hypnogram_flag  \\\n",
+       "0                           64.0         True           0.0             0.0   \n",
+       "1                           64.0         True           0.0             0.0   \n",
+       "2                            0.0         True           0.0             0.0   \n",
+       "3                            0.0         True           0.0             0.0   \n",
+       "4                            0.0         True           0.0             0.0   \n",
+       "...                          ...          ...           ...             ...   \n",
+       "1006                         0.0         True           3.0             0.0   \n",
+       "1007                         0.0         True           3.0             0.0   \n",
+       "1008                         0.0         True           3.0             0.0   \n",
+       "1009                         0.0         True           3.0             0.0   \n",
+       "1010                         0.0         True           3.0             0.0   \n",
+       "\n",
+       "      subject_number  group_focal_amplitude      angle  \\\n",
+       "0              520.0               2.976170   3.477607   \n",
+       "1              520.0               2.976170   4.503121   \n",
+       "2              520.0               3.804194  13.968792   \n",
+       "3              520.0               4.955938  13.258108   \n",
+       "4              520.0               8.316221  13.515828   \n",
+       "...              ...                    ...        ...   \n",
+       "1006           520.0               1.300367   1.823837   \n",
+       "1007           520.0               1.171589   2.174228   \n",
+       "1008           520.0               1.286573   1.430909   \n",
+       "1009           520.0               1.994857   1.798297   \n",
+       "1010           520.0               1.732562   4.168890   \n",
+       "\n",
+       "      relative_spike_amplitude  relative_spike_duration  \n",
+       "0                     2.097570                     25.0  \n",
+       "1                     3.596624                     28.0  \n",
+       "2                     6.460579                     34.0  \n",
+       "3                     4.473004                     27.0  \n",
+       "4                     8.457921                     32.0  \n",
+       "...                        ...                      ...  \n",
+       "1006                  1.026618                     36.0  \n",
+       "1007                  0.923803                     31.0  \n",
+       "1008                  1.190395                     46.0  \n",
+       "1009                  2.020678                     52.0  \n",
+       "1010                  1.400137                     31.0  \n",
+       "\n",
+       "[1011 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "_sum = 0\n",
-    "count = 0\n",
-    "for k,v in {\n",
-    "    'p485': 19202/30022,\n",
-    "    'p486': 24306/28050,\n",
-    "    'p488': 86479/111063,\n",
-    "    'p496': 16361/19573,\n",
-    "    'p499': 58390/66926,\n",
-    "    'p520': 1011/1390,\n",
-    "}.items():\n",
-    "    print(k,v)\n",
-    "    _sum += v\n",
-    "    count+= 1\n",
-    "    \n",
-    "print('avg:', _sum/count)\n"
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "def flat_feaures_to_dataframe(subject, subject_flat_features):\n",
+    "    titles = [ name for index, name in FEATURES_NAMES.items()]\n",
+    "    index_to_channel_name = np.load(subj.paths.subject_channel_name_to_index_path, allow_pickle=True).item()\n",
+    "    df = pd.DataFrame(subject_flat_features, columns=titles)\n",
+    "    index_to_channel_convert = lambda x: index_to_channel_name[float(str(x)[3:])]\n",
+    "    df['channel'] =  df['channel'].apply(index_to_channel_convert)\n",
+    "    df['group_focal'] =  df['group_focal'].apply(index_to_channel_convert)\n",
+    "    df['group'] =  df['group'].apply(lambda x: float(str(x)[3:]))\n",
+    "    df['is_in_scalp'] = df['is_in_scalp'].apply(lambda x: x == 1)\n",
+    "    return df\n",
+    "\n",
+    "flat_feaures_to_dataframe(subj, flat_features)\n"
    ]
   }
  ],
